fix(ui): remove double border-top in no data scenario (fix #18006) (#18020)
* fix(ui): remove double border-top in no data scenario #18006

* fix(ui): remove double border in no-data scenario #18006

--- a/ui/src/components/table/QTable.sass
+++ b/ui/src/components/table/QTable.sass
@@ -242,7 +242,8 @@
  * On light background
  */
 .q-table__bottom
-  border-top: 1px solid $table-border-color
+  &:not(&--nodata)
+    border-top: 1px solid $table-border-color
 
 .q-table
   thead, tr, th, td
